force-app/main/default/objects/SCH_Schedule_Action__c/SCH_Schedule_Action__c.object-meta.xml
<CustomObject>
    <label>Schedule Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>