force-app/main/default/objects/SCH_Schedule_Action__c/fields/Associate_With_Referenced_Record__c.field-meta.xml
<CustomField>
    <fullName>Associate_With_Referenced_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Activity With Referenced Rec?</label>
    <type>Checkbox</type>
</CustomField>