force-app/main/default/objects/SCH_Schedule_Action__c/fields/Email_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Address__c</fullName>
    <label>Email From Address</label>
    <type>Email</type>
</CustomField>