force-app/main/default/objects/SCH_Schedule_Action__c/fields/Email_From_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Address_Id__c</fullName>
    <label>Email From Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>