force-app/main/default/objects/SCH_Schedule_Action__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <referenceTo>SCH_Schedule__c</referenceTo>
    <relationshipLabel>Schedule Actions</relationshipLabel>
    <relationshipName>Schedule_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>