force-app/main/default/objects/SCH_Schedule_Action__c/fields/SMS_From_Number__c.field-meta.xml
<CustomField>
    <fullName>SMS_From_Number__c</fullName>
    <label>SMS From Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>