force-app/main/default/objects/SCH_Schedule_Action__c/fields/SMS_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_Id__c</fullName>
    <label>SMS Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>