force-app/main/default/objects/SCH_Schedule_Action__c/fields/SMS_To_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>SMS_To_Number_Field__c</fullName>
    <label>SMS To Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>